# BIM

./: BIM.hpp  CMakeLists.txt  DefaultPlane.hpp  GUI.hpp  Model.hpp  ProgressBar.hpp  README.md  RenderBatch.hpp  Texture.hpp  glMath.hpp  main.cpp  readOBJ.hpp
Fonts/: Font2.fnt  Font3White.fnt  PixellariWhite.fnt
Resources/Textures/Skybox/: skyboxTextureDivider.py
include/: Animation.hpp  BIM.hpp  Button.hpp  Camera.hpp  DefaultPlane.hpp  Font.hpp  GUI.hpp  Input.hpp  Matrix.hpp  Model.hpp  Quaternion.hpp  RenderBatch.hpp  SkyBox.hpp  Texture.hpp  glMath.hpp  readOBJ.hpp
shaders/: DefaultPlaneFragmentShader.glsl  DefaultPlaneVertexShader.glsl  GUIFragmentShader.glsl  GUIVertexShader.glsl  LightSimulationFragmentShader.glsl  LightSimulationVertexShader.glsl  fragmentShader.glsl  vertexShader.glsl
srcs/: Animation.cpp  Input.cpp  Texture.cpp  UpdateStates.cpp  VertexBufferSetup.cpp  fps.cpp  fragmentShader.glsl  main.cpp  readOBJ.cpp  skyboxVertexShader.glsl  vertexShader.glsl
